[package]
name = "piinguin"
version = "0.1.0"
authors = ["Sentry <hello@sentry.io>"]

[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew", features = ["toml", "yaml", "msgpack", "cbor"] }
stdweb = "*"

semaphore-general = { git = "https://github.com/getsentry/semaphore", default-features = false }
serde = "1.0.76"
failure = "*"
serde_json = "*"

# must be same version as in semaphore-general, not more, not less
uuid = { version = "0.7.4", features = ["stdweb"] }
