[package]
name = "piinguin"
version = "0.1.0"
authors = ["Sentry <hello@sentry.io>"]

[dependencies]
yew = { version = "0.9", features = ["toml", "yaml", "msgpack", "cbor"] }
stdweb = "*"
serde = "1.0.76"
failure = "*"
serde_json = "*"

relay-general = { git = "https://github.com/getsentry/relay", default-features = false }
# must be same version as in relay-general, not more, not less
uuid = { version = "0.8.1", features = ["stdweb"] }
